# speedtest-rs

./: Cargo.toml  README.md
app/: index.html  index.js  package.json
src/: lib.rs
