[package]
authors = ["poccariswet"]
description = "Speedtest on wasm"
exclude = ["tests/config/*"]
license = "MIT OR Apache-2.0"
name = "speedtest-wasm"
repository = "https://github.com/poccariswet/speedtest-wasm"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.0"
chrono = "0.4.11"
env_logger = "0.7.1"
log = "0.4.8"
reqwest = "0.9.24"
time = "0.1.42"
url = "2.1.1"
xml-rs = "0.8.3"
mockito = "0.25.1"
md5 = "0.7.0"
csv = "1.1.3"
serde = { version = "1", features = ["derive"] }

wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.1", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
rustls-tls = ["reqwest/rustls-tls"]
default = ["console_error_panic_hook"]
